--- a/index.html
+++ b/index.html
@@ -53,21 +53,25 @@
         </div>
     </section>
 
-    <section class="dispositivos">
-        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
-            <ul class="dispositivos__lista">
-                <li>
-                    <img src="img/tv.png" alt="Ícone de televisão">
-                    <h3 class="lista__item">TV</h3>  </li>
-                <li>
-                    <img src="img/computador.png" alt="Ícone de celular">
-                    <h3 class="lista__item">Computador</h3>  </li>
-                <li>
-                    <img src="img/celular.png" alt="Ícone de celular">
-                    <h3 class="lista__item">Celular</h3>  </li>
-            </ul>
-    </section>
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
 
+        <ul class="rodape__lista">
+            <li class="lista__link"><a href="#">Idioma</a></li>
+            <li class="lista__link"><a href="#">Dispositivos compatíveis</a></li>
+            <li class="lista__link"><a href="#">Contrato de assinatura</a></li>
+            <li class="lista__link"><a href="#">Politica de privacidade</a></li>
+            <li class="lista__link"><a href="#">Proteção de dados no Brasil</a></li>
+            <li class="lista__link"><a href="#">Anuncios personalizados</a></li>
+            <li class="lista__link"><a href="#">Ajuda</a></li>
+         </ul>
+         <p class="rodape__texto">2021 Alura, Alura+ e Alura Lingua. Todos os assinatura paga. 
+            Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura.</p>
+
+
+
+    </footer>
 
 </body>
 
